--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -1,7 +1,12 @@
 extends ../layouts/main.pug
 
-    block content
-        hi#my-unique-id Best Site EVER!!!
+block globals
+  - title = "The Adventure of a Lifetime"
 
-        p.intro-text(data-attr="my value") It was a rainy day in Barrie
-            
+block content
+
+  header.home-cta
+    h1
+      = title
+      br
+      small It was a rainy day in Pizzaville...
